# smartrisk

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: bootstrap.sh  download_data.sh
src/smartrisk/: __init__.py  cli.py
src/smartrisk/configs/: config.yaml
src/smartrisk/configs/data/: kaggle_disaster.yaml
src/smartrisk/configs/llm/: tinyllama_qlora.yaml
src/smartrisk/configs/train/: llm_text_classification.yaml  tabular_baseline.yaml
src/smartrisk/data/: datamodules.py  kaggle_disaster.py
src/smartrisk/features/: preprocess.py  text.py
src/smartrisk/llm/: finetune_qlora.py  infer.py  utils.py
src/smartrisk/models/: tabular.py
src/smartrisk/serve/: api.py
