[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartrisk"
version = "0.1.0"
description = "SmartRisk — production-ready project with classical ML and LLM fine-tuning (QLoRA)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.2",
  "pyarrow>=15",
  "joblib>=1.3",
  "mlflow>=2.10",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "omegaconf>=2.3",
  "typer>=0.12",
  "rich>=13",
]

[project.optional-dependencies]
llm = [
  "transformers>=4.44",
  "datasets>=2.19",
  "accelerate>=0.33",
  "peft>=0.11",
  "bitsandbytes>=0.43; platform_system == 'Linux'",
  "trl>=0.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
